# Lesson_04_Catch2

./: .gitignore
Task_01/: CMakeLists.txt  List.hpp  ListNode.cpp  ListNode.hpp  main.cpp  test-main.cpp
Task_01/CMakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ListNodeProject.sln  ListNodeProject.vcxproj  ListNodeProject.vcxproj.filters  ListNodeTest.vcxproj  ListNodeTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Task_01/Catch2Build/: ALL_BUILD.vcxproj  Catch2.sln
Task_01/Catch2Build/src/: Catch2.vcxproj  Catch2.vcxproj.filters  Catch2WithMain.vcxproj  Catch2WithMain.vcxproj.filters
Task_02/: List.cpp  main.cpp  test-main.cpp
Task_02/CMakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ListNodeProject.sln  ListNodeProject.vcxproj  ListNodeProject.vcxproj.filters  ListNodeTest.vcxproj  ListNodeTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Task_02/Catch2Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Catch2.sln
Task_02/Catch2Build/src/: Catch2.vcxproj  Catch2.vcxproj.filters  Catch2WithMain.vcxproj  Catch2WithMain.vcxproj.filters
